<resources>
    <string name="app_name">Stressless</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="intro_message">Welcome to <b>Scheduler</b>!
        This sample demonstrates how you can schedule an alarm that causes a service to
        be started. This is useful when you want to schedule alarms that initiate
        long-running operations. Click START ALARM to activate an alarm to check
        the Google home page for a custom doodle once a day. If the app finds a doodle,
        it posts a \"Doodle Alert\" as a notification. Click CANCEL ALARM to cancel the
        alarm. Once the alarm is active, it automatically restarts when the device is
        rebooted.</string>
    <string name="start_text">Start Alarm</string>
    <string name="cancel_text">Cancel Alarm</string>
    <string name="doodle_alert">Doodle Alert</string>
    <string name="doodle_found">There is a Google doodle today!!</string>
    <string name="no_doodle">No Google doodle today.</string>
    <string name="connection_error">Connection error.</string>
    <string name="action_settings">Settings</string>
    <string name="bmi_height_index">cm</string>
    <string-array name="bmi_height_indexes">
        <item>cm</item>
        <item>feet</item>
    </string-array>
    <string name="bmi_weight_index">kg</string>
    <string-array name="bmi_weight_indexes">
        <item>pounds</item>
        <item>kg</item>
    </string-array>
    <string name="prompt_first">First Name</string>
    <string name="prompt_last">Last Name</string>
    <string name="prompt_day">Day</string>
    <string name="prompt_month">Month</string>
    <string name="prompt_year">Year</string>
    <string name="prompt_height">cm</string>
    <string name="prompt_weight">kg</string>

    <string name="action_first_short">First Name</string>
    <string name="action_last_short">Last Name</string>
    <string name="action_day_short">Day</string>
    <string name="action_month_short">Month</string>
    <string name="action_year_short">Year</string>
    <string name="action_height_short">Height</string>
    <string name="action_weight_short">Weight</string>
    <string name="action_sign_in">NEXT</string>

    <string name="title_activity_signupmain">Sign Up Main</string>
    <string name="default_setting">Use default setting for height and weight</string>

    <!--Default-->
    <string name="title_activity_achievement">Achievement</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_signupnext">Sign Up Next</string>
    <string name="title_activity_achievements">Achievements</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="title_activity_playing">Playing</string>
    <string name="title_activity_stressless">Stressless</string>

</resources>
