<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_dhamar_margin"
    android:layout_marginRight="@dimen/activity_dhamar_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context="com.example.dhamarre.stressless.Activity.SignUpActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:paddingBottom="25dp"
        android:paddingTop="15dp"
        android:src="@drawable/ic_splashscreen" />

        <LinearLayout
            android:id="@+id/all_singup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/playing_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Identity"
                android:textColor="@color/lightpurple"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape"
                android:hint="@string/prompt_first"
                android:imeActionLabel="@string/action_first_short"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape"
                android:hint="@string/prompt_last"
                android:imeActionLabel="@string/action_last_short"
                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true" />


            <!--tiga kolom-->
            <!--<RelativeLayout-->
            <!--android:id="@+id/birthday"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
            <!--android:id="@+id/day"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:background="@drawable/shape"-->
            <!--android:hint="@string/prompt_day"-->
            <!--android:imeActionLabel="@string/action_day_short"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="number"-->
            <!--android:maxLines="1"-->
            <!--android:padding="5dp"-->
            <!--android:singleLine="true" />-->

            <!--<EditText-->
            <!--android:id="@+id/month"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:background="@drawable/shape"-->
            <!--android:hint="@string/prompt_month"-->
            <!--android:imeActionLabel="@string/action_month_short"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="number"-->
            <!--android:maxLines="1"-->
            <!--android:padding="5dp"-->
            <!--android:singleLine="true" />-->

            <!--<EditText-->
            <!--android:id="@+id/year"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:background="@drawable/shape"-->
            <!--android:hint="@string/prompt_year"-->
            <!--android:imeActionLabel="@string/action_year_short"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="number"-->
            <!--android:maxLines="1"-->
            <!--android:padding="5dp"-->
            <!--android:singleLine="true" />-->

            <!--</RelativeLayout>-->

            <TextView
                android:id="@+id/playing_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Date of Birthday"
                android:textColor="@color/lightpurple"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/btnNext"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:background="@color/purple"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

    <!--<ImageView-->
    <!--android:id="@+id/imageView2"-->
    <!--android:layout_width="218dp"-->
    <!--android:layout_height="173dp"-->
    <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
    <!--app:srcCompat="@mipmap/ic_logo_mulia_data_2"-->
    <!--tools:layout_editor_absoluteX="84dp"-->
    <!--tools:layout_editor_absoluteY="10dp" />-->

    <!--<EditText-->
    <!--android:id="@+id/etFirstName"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->

    <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
    <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
    <!--android:ems="10"-->
    <!--android:hint="First Name"-->
    <!--android:inputType="textPersonName"-->
    <!--tools:layout_editor_absoluteX="85dp"-->
    <!--tools:layout_editor_absoluteY="194dp" />-->

    <!--<EditText-->
    <!--android:id="@+id/etLastName"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
    <!--android:ems="10"-->
    <!--android:hint="Last Name"-->
    <!--android:inputType="textPersonName"-->
    <!--tools:layout_editor_absoluteX="85dp"-->
    <!--tools:layout_editor_absoluteY="251dp" />-->

    <!--<EditText-->
    <!--android:id="@+id/etBDay"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
    <!--android:ems="10"-->
    <!--android:inputType="date"-->
    <!--tools:layout_editor_absoluteX="84dp"-->
    <!--tools:layout_editor_absoluteY="317dp" />-->

    <!--<Button-->
    <!--android:id="@+id/btnNext"-->
    <!--android:layout_width="215dp"-->
    <!--android:layout_height="33dp"-->
    <!--android:background="@color/purple"-->
    <!--android:text="Next"-->
    <!--android:textColor="@color/white"-->
    <!--tools:layout_editor_absoluteX="85dp"-->
    <!--tools:layout_editor_absoluteY="394dp" />-->

    <!--<android.support.constraint.Guideline-->
    <!--android:id="@+id/guideline"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--app:layout_constraintGuide_begin="85dp" />-->

    <!--<android.support.constraint.Guideline-->
    <!--android:id="@+id/guideline2"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--app:layout_constraintGuide_begin="300dp" />-->
</LinearLayout>
